--- a/project/config/services.yaml
+++ b/project/config/services.yaml
@@ -3,8 +3,11 @@
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
+imports:
+    - { resource: konniblog.yaml }
 parameters:
-
+    project_dir: "%kernel.project_dir%"
+    public_dir: "%kernel.project_dir%/public"
 services:
     # default configuration for services in *this* file
     _defaults:
@@ -25,3 +28,6 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\Listener\InstallationListener:
+      tags:
+        - { name: kernel.event_listener, event: kernel.request }
