--- a/project/config/packages/security.yaml
+++ b/project/config/packages/security.yaml
@@ -37,5 +37,9 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+        - { path: ^/dashboard, roles: IS_AUTHENTICATED_REMEMBERED }
+        - { path: ^/administration/dashboard,  roles: ROLE_MODERATOR }
+        - { path: ^/administration/comments, roles: ROLE_MODERATOR }
+        - { path: ^/administration, roles: ROLE_ADMIN }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
